prevent code examples from wrapping to multiple lines

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -15,6 +15,10 @@ ul.pager li {
 pre {
     padding: 0;
 }
+pre code {
+    white-space: pre;
+    overflow-wrap: normal;
+}
 
 #maps {
     margin-left: 10px;
